--- a/order/view/seller.html
+++ b/order/view/seller.html
@@ -56,10 +56,21 @@
                         <td>{{ x.tablenumber }}</td>
                         <td>
                             <table class="table">
-                                <tr ng-repeat="y in x.order">
-                                    <td>{{ y.name }}</td>
-                                    <td>{{ y.price }} X {{ y.count }}</td>
-                                </tr>
+                                <thead>
+                                    <tr>
+                                        <th>Name</th>
+                                        <th>Detal</th>
+                                        <th>Status</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr ng-repeat="y in x.order">
+                                        <td>{{ y.name }}</td>
+                                        <td>{{ y.price }} X {{ y.count }}</td>
+                                        <td>{{ y.status }}</td>
+                                        <td><button type="button" class="btn btn-info btn-xs" ng-click="completeOrderDetal(x,y)">complete</button></td>
+                                    </tr>
+                                </tbody>
                             </table>
                         </td>
                         <td>{{ x.status }}</td>
