--- a/order/view/seller.html
+++ b/order/view/seller.html
@@ -37,17 +37,17 @@
         <h1>Seller <small></small></h1>
     </div>
     <div class="row">
-        <h3>user order</h3>
+        <h3>User Order</h3>
         <div class="col-sm-12" style="background-color:lavender;">
             <table class="table table-striped">
                 <thead>
                     <tr>
-                        <th ng-click="clickSort('time')" id='time'>time</th>
-                        <th ng-click="clickSort('tablenumber')" id='tablenumber'>tablenumber</th>
-                        <th>order</th>
-                        <th ng-click="clickSort('status')" id='status'>status</th>
-                        <th>sum</th>
-                        <th>action</th>
+                        <th ng-click="clickSort('time')" id='time'>Time</th>
+                        <th ng-click="clickSort('tablenumber')" id='tablenumber'>Table Number</th>
+                        <th>Order</th>
+                        <th ng-click="clickSort('status')" id='status'>Status</th>
+                        <th>Sum</th>
+                        <th>Action</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -68,7 +68,7 @@
                                         <td>{{ y.name }}</td>
                                         <td>{{ y.price }} X {{ y.count }}</td>
                                         <td>{{ y.status }}</td>
-                                        <td><button type="button" class="btn btn-info btn-xs" ng-click="completeOrderDetal(x,y)">complete</button></td>
+                                        <td><button type="button" class="btn btn-info btn-xs" ng-click="completeOrderDetal(x,y)">Complete</button></td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -77,8 +77,8 @@
                         <td>{{ x.sum }}</td>
                         <td>
                             <div class="btn-group-vertical">
-                                <button type="button" class="btn btn-primary" ng-click="completeOrder(x)">complete</button>
-                                <button type="button" class="btn btn-primary" ng-click="deleteOrder(x)">delete</button>
+                                <button type="button" class="btn btn-primary" ng-click="completeOrder(x)">Complete</button>
+                                <button type="button" class="btn btn-primary" ng-click="deleteOrder(x)">Delete</button>
                             </div>
                         </td>
                     </tr>
