--- a/order/view/seller.html
+++ b/order/view/seller.html
@@ -73,10 +73,11 @@
                                 </tbody>
                             </table>
                         </td>
-                        <td>{{ x.status }}</td>
+                        <td class="text-danger">{{ x.status }}</td>
                         <td>{{ x.sum }}</td>
                         <td>
                             <div class="btn-group-vertical">
+                                <button type="button" class="btn btn-primary" ng-click="confirmOrder(x)">{{ml.confirm}}</button>
                                 <button type="button" class="btn btn-primary" ng-click="completeOrder(x)">{{ml.complete}}</button>
                                 <button type="button" class="btn btn-primary" ng-click="deleteOrder(x)">{{ml.del}}</button>
                             </div>
